lang to arabic done

--- a/lang/ar/cart.html
+++ b/lang/ar/cart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>TechPro | Product Section</title>
+    <title>تكنك بروفشنال | قسم المنتجات</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../../css/loader.css" />
     <link rel="stylesheet" href="../../css/main.css" />
     <link rel="stylesheet" href="../../css/cart.css" />
+    <link rel="stylesheet" href="../../css/lang.css" />
 
     <link
       rel="stylesheet"
@@ -72,14 +73,14 @@
             <div
               class="d-flex align-items-center justify-content-around text-muted w-30"
             >
-              <a href="#" class="text-dark text-fade">Category</a>
+              <a href="#" class="text-dark text-fade">الأصناف</a>
               <img src="../../img/icons/next (1).png" width="16" height="16" />
-              <a href="#" class="prev_page text-dark text-fade">Furniture</a>
+              <a href="#" class="prev_page text-dark text-fade"></a>
             </div>
             <div
               class="cat_social_media d-flex flex-row justify-content-between align-items-center w-10"
             >
-              <small class="text-muted">Share</small>
+              <small class="text-muted">مشاركة</small>
               <div>
                 <img
                   src="../../img/products/icons/facebook.png"
@@ -110,12 +111,11 @@
               <div
                 class="cart_main_desc_header_holder d-flex flex-column align-items-center justify-content-around h-60"
               >
-                <div class="cart_main_desc_title h3 pt-4" style="font-size: 5vw;border-bottom: 2px solid #007bff;text-transform: capitalize;">Cotton T-shirt</div>
+                <div class="cart_main_desc_title h3 pt-4" style="font-size: 5vw;border-bottom: 2px solid #007bff;text-transform: capitalize;"></div>
                 <div class="cart_main_desc_desc text-center small-16 text-muted">
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Magni voluptatem soluta architecto reprehenderit possimus
-                  beatae eos, expedita alias molestias, odio quidem.
-                  Exercitationem?
+                 هذا الصنف يعد من الأصناف المميزة وذات الطلب المستمر بسبب جودة المنتج و السعر المريح الظاهرين أمامك ... 
+                 يمكنك جعله من المنتجات المفضلة لديك عن طريق وضع قلب على المنتج . 
+                <b>تكنــــــــــــــــــــــــــــــــــــك بروفشنال</b>
                 </div>
                 <div class="cart_main_desc_price h3" style="font-size: 8vw;color: #6ce2ac ;font-weight: 400;" value="25.00"></div>
               </div>
@@ -149,7 +149,7 @@
                     style="width: 100%; cursor: pointer;"
                   >
                     <i class="fa fa-shopping-cart"></i>
-                    <p class="h5 p-0 m-0">buy</p>
+                    <p class="h5 p-0 m-0">شراء</p>
                   </div>
                 </a>
                 <div
