--- a/lang/ar/category.html
+++ b/lang/ar/category.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="../../css/clock.css" />
     <link rel="stylesheet" href="../../css/main.css" />
     <link rel="stylesheet" href="../../css/cat.css" />
+    <link rel="stylesheet" href="../../css/lang.css" />
 
     <link
       rel="stylesheet"
@@ -54,7 +55,7 @@
             />
           </h1>
         </a>
-        <a href="../../shopping_cart.html" class="pl-lg-5 position-relative"
+        <a href="shopping_cart.html" class="pl-lg-5 position-relative"
           ><img
             src="../../img/icons/32 px/2.png"
             class="position-relative"
@@ -105,7 +106,7 @@
             <div
               class="cat_social_media d-flex flex-row justify-content-between align-items-center w-10"
             >
-              <small class="text-muted">Share</small>
+              <small class="text-muted">مشاركة</small>
               <div>
                 <img
                   src="../../img/products/icons/facebook.png"
@@ -132,13 +133,14 @@
               id="cat_title_text"
               class="h3 p-5 text-dark text-muted d-flex flex-column justify-content-center align-items-center"
             >
-              Clothsing & Fashion
+              الملابس و الموضة
               <div class="w-10 bg-primary mt-5" style="height: 0.2rem;"></div>
             </div>
           </div>
         </div>
 
         <div
+          dir="rtl"
           class="w-75 position-relative d-flex flex-row bg-white justify-content-around text-muted align-items-center"
           style="height: 7vh; transform: translateX(15%);"
         >
@@ -157,15 +159,15 @@
               type="text"
               id="search"
               class="form-control border-0"
-              placeholder="Search"
+              placeholder="ابحث"
               aria-label="Input group example"
               aria-describedby="btnGroupAddon"
             />
-            <div class="d-flex align-items-center">Search By</div>
+            <div class="d-flex align-items-center">بحث بواسطة</div>
             <select id="search_dropdown" class="bg-white border-0 text-center">
               <option value="" disabled></option>
-              <option value="title" selected>Title</option>
-              <option value="tag">Tag</option>
+              <option value="title" selected>اسم المنتج</option>
+              <option value="tag">التصنيف</option>
             </select>
           </div>
         </div>
@@ -334,15 +336,15 @@
       switch (url_params) {
         case 'food':
           title.innerHTML =
-            'Candded Tasts <div class="w-10 bg-primary mt-5" style="height: 0.2rem;"></div>';
+            'الأطعمة المعلبة <div class="w-10 bg-primary mt-5" style="height: 0.2rem;"></div>';
           break;
         case 'Electronics':
           title.innerHTML =
-            'HouseHold & Electronics Tools <div class="w-10 bg-primary mt-5" style="height: 0.2rem;"></div>';
+            'الأدوات المنزلية و الكهربائية <div class="w-10 bg-primary mt-5" style="height: 0.2rem;"></div>';
           break;
         case 'furniture':
           title.innerHTML =
-            'Interior Furnitures <div class="w-10 bg-primary mt-5" style="height: 0.2rem;"></div>';
+            'التصميم الداخلي و الأثاثات <div class="w-10 bg-primary mt-5" style="height: 0.2rem;"></div>';
           break;
       }
     </script>
