--- a/lang/ar/shop.html
+++ b/lang/ar/shop.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar">
   <head>
-    <title>TechPro | Shopping Section</title>
+    <title>تكنك بروفشنال | قسم التسوق</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -11,7 +11,7 @@
     <link rel="icon" sizes="32x32" type="image/x-icon" href="../../img/logo/full_2.png">
     <link rel="stylesheet" href="../../lib/bootstrap.min.css" />
     <link rel="stylesheet" href="../../lib/fontawesome-free/css/all.css" />
-    <!-- <link rel="stylesheet" href="../../css/loader.css" /> -->
+    <link rel="stylesheet" href="../../css/loader.css" />
     <link rel="stylesheet" href="../../css/main.css" />
     <link rel="stylesheet" href="../../css/shop.css" />
     <link rel="stylesheet" href="../../css/lang.css" />
