--- a/lang/ar/shopping_cart.html
+++ b/lang/ar/shopping_cart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>TechPro | Shopping Cart Section</title>
+    <title>تكنك بروفشنال | قسم سلة المنتجات</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="../../css/loader.css" />
     <link rel="stylesheet" href="../../css/main.css" />
     <link rel="stylesheet" href="../../css/shopping_cart.css" />
+    <link rel="stylesheet" href="../../css/lang.css" />
   </head>
   <body>
     <!-- pre-loader -->
@@ -79,7 +80,7 @@
 
     <!-- SHOPPING CART  -->
     <div class="big_head display-4 text-center pt-5 mt-2 pb-4">
-      My Shopping Cart
+      سلتــــــــــــــي
     </div>
     <div class="back_to btn btn-light border ml-5">
       <img
@@ -89,14 +90,14 @@
         onclick="goBack()"
       />
     </div>
-    <div class="table-responsive container pt-5">
+    <div class="table-responsive container pt-5" dir="rtl">
       <table class="table table-striped bg-white border-top-0">
         <thead>
           <tr class="text-center">
-            <td class="border-top-0"><small>Description</small></td>
-            <td class="border-top-0"><small>Quantity</small></td>
-            <td class="border-top-0"><small>Remove</small></td>
-            <td class="border-top-0"><small>Price</small></td>
+            <td class="border-top-0"><small>الوصف</small></td>
+            <td class="border-top-0"><small>الكمية</small></td>
+            <td class="border-top-0"><small>حذف</small></td>
+            <td class="border-top-0"><small>السعر</small></td>
           </tr>
         </thead>
         <tbody class="shopping_cart_table_rows"></tbody>
@@ -105,32 +106,32 @@
     <!-- Total  -->
     <div
       class="total row d-flex justify-content-lg-around justify-content-between align-items-center p-2 w-100"
+      dir="rtl"
     >
       <div
         class="total_products border p-3 d-flex flex-row justify-content-around align-items-center"
       >
-        <small class="text-dark pr-4">Total Products</small>
+        <small class="text-dark pr-4">عدد المنتجات الكلي</small>
         <b id="total_product">0</b>
       </div>
       <div
         class="total_quantites border p-3 d-flex flex-row justify-content-around align-items-center"
       >
-        <small class="text-dark pr-4">Total Quantity</small>
+        <small class="text-dark pr-4">الكمية الكلية</small>
         <b class="total_quantity">0</b>
       </div>
       <div class="d-none w-100"></div>
       <div
         class="total_price border p-3 d-flex flex-row justify-content-around align-items-center"
       >
-        <small class="text-dark pr-4">Total Price</small>
+        <small class="text-dark pr-4">السعر الكلي</small>
         <b>$</b><b id="total_price">0</b>
       </div>
       <div
         class="remove_all bg-danger p-3 d-flex flex-row justify-content-around align-items-cente"
         style="cursor: pointer;"
       >
-        <small class="text-white pr-4 d-flex align-items-center"
-          >Remove All</small
+        <small class="text-white pr-4 d-flex align-items-center">حذف الكل</small
         ><b class="text-white">X</b>
       </div>
     </div>
@@ -146,7 +147,7 @@
         style="cursor: pointer;"
         id="final_checkout"
       >
-        CHECKOUT
+        شــــــــــــــــــــراء
       </div>
     </div>
     <!-- END CHECKOUT BUTTON -->
