--- a/lang/ar/shop.html
+++ b/lang/ar/shop.html
@@ -11,7 +11,7 @@
     <link rel="icon" sizes="32x32" type="image/x-icon" href="../../img/logo/full_2.png">
     <link rel="stylesheet" href="../../lib/bootstrap.min.css" />
     <link rel="stylesheet" href="../../lib/fontawesome-free/css/all.css" />
-    <link rel="stylesheet" href="../../css/loader.css" />
+    <!-- <link rel="stylesheet" href="../../css/loader.css" /> -->
     <link rel="stylesheet" href="../../css/main.css" />
     <link rel="stylesheet" href="../../css/shop.css" />
     <link rel="stylesheet" href="../../css/lang.css" />
@@ -54,10 +54,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto pl-4 col-md-7 d-flex justify-content-between">
-            <li class="nav-item"><a href="#" class="nav-link">SERVICES</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">MAP</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">CONTAINER</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">CONTACT</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">القائمة</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">المنتجات الرائجة</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">التواصل</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link">الرئيسية</a></li>
           </ul>
         </div>
       </div>
@@ -69,11 +69,11 @@
     <!-- END OF SHOPING SIDE -->
 
     <!-- CATALOG FIRST BAR SLIDER -->
-    <section class="catalog_sec">
+    <section class="catalog_sec"  dir="ltr">
       <!-- <div class="display-4 text-center cat_head_line mb-4 mt-5">CATALOG</div> -->
       <br />
       <div class="center row d-flex justify-content-around">
-        <div class="col-md-3 col-sm-12 col-lg-3 col-xl-3">
+        <div class="col-12 col-md-3 col-sm-12 col-lg-3 col-xl-3">
           <a href="category.html?category=Electronics"> <div class="cat_img1">
             <div class="cat_header">
               <div class="h3 text-white rounded p-1 bg-primary text-center">ادوات كهربائية</div>
@@ -82,7 +82,7 @@
           </div> </a>
           
         </div>
-        <div class="col-md-3 col-sm-12 col-lg-3 col-xl-3">
+        <div class="col-12 col-md-3 col-sm-12 col-lg-3 col-xl-3">
           <a href="category.html?category=clothes">
             <div class="cat_header"><div class="h3 text-white bg-primary p-1 text-center">ملابس</div></div>
           <div class="cat_img2">
@@ -90,7 +90,7 @@
           </div>
           </a>
         </div>
-        <div class="col-md-3 col-sm-12 col-lg-3 col-xl-3">
+        <div class="col-12 col-md-3 col-sm-12 col-lg-3 col-xl-3">
           <a href="category.html?category=food">
             <div class="cat_header"><div class="h3 text-white bg-primary p-1 text-center">اطعمة معلبة</div></div>
           <div class="cat_img3">
@@ -98,7 +98,7 @@
           </div>
           </a>
         </div>
-        <div class="col-md-3 col-sm-12 col-lg-3 col-xl-3">
+        <div class="col-12 col-md-3 col-sm-12 col-lg-3 col-xl-3">
           <a href="category.html?category=furniture">
             <div class="cat_header"><div class="h3 text-white bg-primary p-1 text-center">أثاثات منزلية</div></div>
           <div class="cat_img4">
@@ -316,7 +316,7 @@
                 </div>
                 <div class="d-flex flex-column justify-content-between pt-4">
                   <div class="h6">
-                    SUDAN KHARTOUM,CENTERAL MARKET
+                    السوق المركزي , الخرطوم 
                   </div>
                   <div class="h5"><a href="tel:0912734315" class="text-dark">+249912734315</a></div>
                   <div class="h6">
@@ -325,61 +325,61 @@
                 </div>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-12 d-flex flex-column">
-                <div class="h4">Our Products</div>
+                <div class="h4">منتجاتنا</div>
 
                 <div class="d-flex flex-column justify-content-between pt-4">
                   <a
                     href="#"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
-                    >Electronics</a
+                    >الأدوات الكهربية</a
                   >
                   <a
                     href="#"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
-                    >Food</a
+                    >أطعمة</a
                   >
                   <a
                     href="#"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
-                    >Clothes</a
+                    >ملبوسات</a
                   >
                   <a
                     href="#"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
-                    >Furnitures</a
+                    >أثاثات منزلية</a
                   >
                 </div>
               </div>
               <div class="col-lg-3 col-md-3 col-sm-12 d-flex flex-column">
-                <div class="h4">Useful Links</div>
+                <div class="h4">التواصل الإجتماعي</div>
                 <div class="d-flex flex-column justify-content-between pt-4">
                   <a
-                    href="#"
+                    href="https://web.facebook.com/groups/109112839206827/pending_posts?order_by=recent&search=&has_selection=false"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
-                    >About Us</a
+                    >مجموعتنا على الفيسبوك</a
                   >
                   <a
-                    href="#"
+                    href="https://web.facebook.com/profile.php?id=100026611802860"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
-                    >Blog</a
+                    >صفحتنا على الفيسبوك</a
                   >
                   <a
-                    href="#"
+                    href="https://wa.me/2491275158088"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
-                    >FAQs</a
+                    >قروبنا على الواتساب</a
                   >
                   <a
-                    href="#"
+                    href="https://t.me/mariamsudan"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
-                    >Contact</a
+                    >قروبنا على التلقرام</a
                   >
                 </div>
               </div>
@@ -387,17 +387,21 @@
           </div>
           <div class="w-100 d-none"></div>
           <div class="col-12">
-            <div class="row b-primary">
+            <div class="row b-primary pt-4">
               <div class="col-12">
-                <form action="">
+                <div class="d-flex flex-lg-row flex-column justify-contetn-lg-between justify-content-center align-items- align-items-lg-center">
                   <input
-                    type="email"
-                    name="email"
-                    class="contact_sub_email w-100"
-                    placeholder="Your email..."
-                    id=""
+                    type="text"
+                    name="opinion"
+                    class="contact_sub_email col-12 col-lg-10"
+                    placeholder="رأيك يهمنا ...."
+                    id="user_opinion"
+                    minlength="2" maxlength="450"
+                    required
                   />
-                </form>
+                  <div style="background-color: #31d4ae;cursor: pointer;" class="col-lg-2 col-12 text-center border-0 p-1 text-white" id="send_opinion">إرسال</div>
+                </div>
+                <div class="mt-2 alert alert-secondary border-0 text-muted d-flex justify-content-start" >لديك مساحة ل 450 حرف ....</div>
               </div>
             </div>
           </div>
@@ -410,12 +414,13 @@
     <section class="footer">
       <div class="footer_wrapper text-center pt-4 text-light">
         <small
-          >EMAIL : mohamedx.28@mail.com | TEL : 0912734315 | ADDRESS :
-          KHARTOUM</small
+          >البريد الإلكتروني : mohamedx.28@mail.com | الهاتف : 0912734315 |
+          العنوان : KHARTOUM</small
         >
         <br /><small class="text-muted text-center"
-          >Copyright <i class="fa fa-copyright" aria-hidden="true"></i>2020
-          SCRIPTHOUSE. All right reserved. Designed by Breezy</small
+          >حقوق الطبع <i class="fa fa-copyright" aria-hidden="true"></i>2020
+          جميع الحقوق محفوظة لدى SCRIPTHOUSE . تم التصميم بواسطة
+          <a href="#"> BREEZY</a></small
         >
       </div>
     </section>
@@ -466,7 +471,7 @@
               settings: {
                 arrows: false,
                 centerMode: true,
-                centerPadding: '40px',
+                centerPadding: '10px',
                 slidesToShow: 1.15,
               },
             },
@@ -475,6 +480,41 @@
       });
     </script>
     <!-- scroll effect with navbar -->
+     <!-- navigation -->
+     <script>
+      $(document).ready(function () {
+        $('.nav-link').click(function () {
+          var key = $(this).text();
+
+          switch (key) {
+            case 'القائمة':
+              $('html, body').animate(
+                { scrollTop: $('.catalog_sec').offset().top },
+                1000,
+              );
+              break;
+            case 'المنتجات الرائجة':
+              $('html, body').animate(
+                { scrollTop: $('.most_sell_container').offset().top },
+                1000,
+              );
+              break;
+            case ' التواصل':
+              $('html, body').animate(
+                { scrollTop: $('.contact_sub_wrapper').offset().top },
+                1000,
+              );
+              break;
+          }
+        });
+      });
+    </script>
+    
+    <!-- Email lib -->
+    <script src="../../lib/smtp.js"></script>
+
+    <script src="js/opinion.js"></script>
+
     <script src="js/nav_scrooler.js"></script>
     <script src="js/loader.js"></script>
   </body>
