--- a/lang/ar/shopping_cart.html
+++ b/lang/ar/shopping_cart.html
@@ -80,7 +80,7 @@
 
     <!-- SHOPPING CART  -->
     <div class="big_head display-4 text-center pt-5 mt-2 pb-4">
-      سلتــــــــــــــي
+      ســــــــــــلتي
     </div>
     <div class="back_to btn btn-light border ml-5">
       <img
