--- a/lang/ar/shopping_cart.html
+++ b/lang/ar/shopping_cart.html
@@ -54,24 +54,8 @@
           <ul
             class="navbar-nav ml-auto pl-4 col-md-7 d-flex justify-content-between"
           >
-            <li class="nav-item">
-              <a href="category.html?category=clothes" class="nav-link"
-                >Clothes</a
-              >
-            </li>
-            <li class="nav-item">
-              <a href="category.html?category=food" class="nav-link">Food</a>
-            </li>
-            <li class="nav-item">
-              <a href="category.html?category=furniture" class="nav-link"
-                >Furnitures</a
-              >
-            </li>
-            <li class="nav-item">
-              <a href="category.html?category=Electronics" class="nav-link"
-                >Electronics</a
-              >
-            </li>
+          <li class="nav-item"><a href="#" class="nav-link">التواصل</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link">الرئيسية</a></li>
           </ul>
         </div>
       </div>
@@ -152,140 +136,154 @@
     </div>
     <!-- END CHECKOUT BUTTON -->
 
-    <!-- CONTACT SUB -->
-    <div class="contact_sub pt-4 bg-light">
-      <div class="container">
-        <div class="row contact_sub_wrapper">
-          <div class="col-12">
-            <div class="row">
-              <div class="col-lg-6 col-md-5 col-sm-12 d-flex flex-column">
-                <div class="h1">
-                  <img
-                    src="../../img/logo/full_1.png"
-                    width="50"
-                    height="50"
-                    class="rounded"
-                    alt=""
-                  />
-                </div>
-                <div class="d-flex flex-column justify-content-between pt-4">
-                  <div class="h6">
-                    SUDAN KHARTOUM,CENTERAL MARKET
-                  </div>
-                  <div class="h6">
-                    <a href="tel:+249912734315" class="text-dark"
-                      >+249912734315</a
-                    >
-                  </div>
-                  <div class="h6">
-                    <a
-                      href="mailto:mohamedx.28@gmail.com?subject=TECHNIC PROFESSIONAL Visitors :"
-                      class="text-dark"
-                      >mohamedx.28@gmail.com</a
-                    >
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-3 col-sm-12 d-flex flex-column">
-                <div class="h4">Our Products</div>
-
-                <div class="d-flex flex-column justify-content-between pt-4">
-                  <a
-                    href="#"
-                    style="text-decoration: none; padding-top: 1rem;"
-                    class="text-dark"
-                    >Electronics</a
-                  >
-                  <a
-                    href="#"
-                    style="text-decoration: none; padding-top: 1rem;"
-                    class="text-dark"
-                    >Food</a
-                  >
-                  <a
-                    href="#"
-                    style="text-decoration: none; padding-top: 1rem;"
-                    class="text-dark"
-                    >Clothes</a
-                  >
-                  <a
-                    href="#"
-                    style="text-decoration: none; padding-top: 1rem;"
-                    class="text-dark"
-                    >Furnitures</a
-                  >
-                </div>
-              </div>
-              <div class="col-lg-3 col-md-3 col-sm-12 d-flex flex-column">
-                <div class="h4">Useful Links</div>
-                <div class="d-flex flex-column justify-content-between pt-4">
-                  <a
-                    href="#"
-                    style="text-decoration: none; padding-top: 1rem;"
-                    class="text-dark"
-                    >About Us</a
-                  >
-                  <a
-                    href="#"
-                    style="text-decoration: none; padding-top: 1rem;"
-                    class="text-dark"
-                    >Blog</a
-                  >
-                  <a
-                    href="#"
-                    style="text-decoration: none; padding-top: 1rem;"
-                    class="text-dark"
-                    >FAQs</a
-                  >
-                  <a
-                    href="#"
-                    style="text-decoration: none; padding-top: 1rem;"
-                    class="text-dark"
-                    >Contact</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="w-100 d-none"></div>
-          <div class="col-12">
-            <div class="row b-primary">
+         <!-- CONTACT SUB -->
+         <div class="contact_sub pt-4 bg-light" dir="rtl">
+          <div class="container">
+            <div class="row contact_sub_wrapper">
               <div class="col-12">
-                <form action="">
-                  <input
-                    type="email"
-                    name="email"
-                    class="contact_sub_email w-100"
-                    placeholder="Your email..."
-                    id=""
-                  />
-                </form>
+                <div class="row">
+                  <div class="col-lg-6 col-md-5 col-sm-12 d-flex flex-column">
+                    <div class="h1">
+                      <img
+                        src="../../img/logo/full_1.png"
+                        width="50"
+                        height="50"
+                        class="rounded"
+                        alt=""
+                      />
+                    </div>
+                    <div class="d-flex flex-column justify-content-between pt-4">
+                      <div class="h6">
+                        السوق المركزي , الخرطوم 
+                      </div>
+                      <div class="h5"><a href="tel:0912734315" class="text-dark">+249912734315</a></div>
+                      <div class="h6">
+                        <a href="mailto:<nowiki>mohamedx.28@gmail.com?subject="TECHNIC PROFESSIONAL emails:" class="text-dark">mohamedx.28@gmail.com</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-md-3 col-sm-12 d-flex flex-column">
+                    <div class="h4">منتجاتنا</div>
+    
+                    <div class="d-flex flex-column justify-content-between pt-4">
+                      <a
+                        href="#"
+                        style="text-decoration: none; padding-top: 1rem;"
+                        class="text-dark"
+                        >الأدوات الكهربية</a
+                      >
+                      <a
+                        href="#"
+                        style="text-decoration: none; padding-top: 1rem;"
+                        class="text-dark"
+                        >أطعمة</a
+                      >
+                      <a
+                        href="#"
+                        style="text-decoration: none; padding-top: 1rem;"
+                        class="text-dark"
+                        >ملبوسات</a
+                      >
+                      <a
+                        href="#"
+                        style="text-decoration: none; padding-top: 1rem;"
+                        class="text-dark"
+                        >أثاثات منزلية</a
+                      >
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-md-3 col-sm-12 d-flex flex-column">
+                    <div class="h4">التواصل الإجتماعي</div>
+                    <div class="d-flex flex-column justify-content-between pt-4">
+                      <a
+                        href="https://web.facebook.com/groups/109112839206827/pending_posts?order_by=recent&search=&has_selection=false"
+                        style="text-decoration: none; padding-top: 1rem;"
+                        class="text-dark"
+                        >مجموعتنا على الفيسبوك</a
+                      >
+                      <a
+                        href="https://web.facebook.com/profile.php?id=100026611802860"
+                        style="text-decoration: none; padding-top: 1rem;"
+                        class="text-dark"
+                        >صفحتنا على الفيسبوك</a
+                      >
+                      <a
+                        href="https://wa.me/2491275158088"
+                        style="text-decoration: none; padding-top: 1rem;"
+                        class="text-dark"
+                        >قروبنا على الواتساب</a
+                      >
+                      <a
+                        href="https://t.me/mariamsudan"
+                        style="text-decoration: none; padding-top: 1rem;"
+                        class="text-dark"
+                        >قروبنا على التلقرام</a
+                      >
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="w-100 d-none"></div>
+              <div class="col-12">
+                <div class="row b-primary pt-4">
+                  <div class="col-12">
+                    <div class="d-flex flex-lg-row flex-column justify-contetn-lg-between justify-content-center align-items- align-items-lg-center">
+                      <input
+                        type="text"
+                        name="opinion"
+                        class="contact_sub_email col-12 col-lg-10"
+                        placeholder="رأيك يهمنا ...."
+                        id="user_opinion"
+                        minlength="2" maxlength="450"
+                        required
+                      />
+                      <div style="background-color: #31d4ae;cursor: pointer;" class="col-lg-2 col-12 text-center border-0 p-1 text-white" id="send_opinion">إرسال</div>
+                    </div>
+                    <div class="mt-2 alert alert-secondary border-0 text-muted d-flex justify-content-start" >لديك مساحة ل 450 حرف ....</div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
-    <!-- CONTACT SUB -->
-
-    <!-- FOOTER -->
-    <section class="footer">
-      <div class="footer_wrapper text-center pt-4 text-light">
-        <small
-          >EMAIL : mohamedx.28@mail.com | TEL : 0912734315 | ADDRESS :
-          KHARTOUM</small
-        >
-        <br /><small class="text-muted text-center"
-          >Copyright <i class="fa fa-copyright" aria-hidden="true"></i>2020
-          SCRIPTHOUSE. All right reserved. Designed by Breezy</small
-        >
-      </div>
-    </section>
-    <!-- END FOOTER -->
+        <!-- CONTACT SUB -->
+    
+        <!-- FOOTER -->
+        <section class="footer" dir="rtl">
+          <div class="footer_wrapper text-center pt-4 text-light">
+            <small
+              >البريد الإلكتروني : mohamedx.28@mail.com | الهاتف : 0912734315 |
+              العنوان : KHARTOUM</small
+            >
+            <br /><small class="text-muted text-center"
+              >حقوق الطبع <i class="fa fa-copyright" aria-hidden="true"></i>2020
+              جميع الحقوق محفوظة لدى SCRIPTHOUSE . تم التصميم بواسطة
+              <a href="#"> BREEZY</a></small
+            >
+          </div>
+        </section>
+        <!-- END FOOTER -->
 
     <!-- JS FILES -->
     <script src="../../lib/jquery-3.5.1.min.js"></script>
     <script src="../../lib/bootstrap-4.3.1.min.js"></script>
+
+    <script>
+      $(document).ready(function () {
+        $('.nav-link').click(function () {
+          var key = $(this).text();
+
+          switch (key) {
+            case 'التواصل':
+              $('html, body').animate(
+                { scrollTop: $('.contact_sub_wrapper').offset().top },
+                1000,
+              );
+              break;
+          }
+        });
+      });
+    </script>
 
     <script>
       function goBack() {
@@ -295,7 +293,7 @@
 
     <!-- Email lib -->
     <script src="../../lib/smtp.js"></script>
-
+    <script src="js/opinion.js"></script>
     <script src="js/shopping_cart.js"></script>
     <!-- scroll effect with navbar -->
     <script src="js/nav_scrooler.js"></script>
