Beta version compelete

--- a/lang/ar/shopping_cart.html
+++ b/lang/ar/shopping_cart.html
@@ -261,6 +261,9 @@
               <a href="#"> BREEZY</a></small
             >
           </div>
+          <div class="text-center mt-4 my-4 text-white">
+            <small>اللغة | <a href="../../index.html">English</a></small>
+          </div>
         </section>
         <!-- END FOOTER -->
 
