--- a/category.html
+++ b/category.html
@@ -69,10 +69,9 @@
           <ul
             class="navbar-nav ml-auto pl-4 col-md-7 d-flex justify-content-between"
           >
-            <li class="nav-item"><a href="#" class="nav-link">SERVICES</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">MAP</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">CONTAINER</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">CONTACT</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">CONTACT</a></li>
+          <li class="nav-item"><a href="shop.html" class="nav-link">SHOP</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link">HOME</a></li>
           </ul>
         </div>
       </div>
@@ -275,18 +274,31 @@
           </div>
           <div class="w-100 d-none"></div>
           <div class="col-12">
-            <div class="row b-primary">
-              <div class="col-12">
-                <form action="">
-                  <input
-                    type="email"
-                    name="email"
-                    class="contact_sub_email w-100"
-                    placeholder="Your email..."
-                    id=""
-                  />
-                </form>
+            <div
+              class="d-flex flex-lg-row flex-column justify-contetn-lg-between justify-content-center align-items- align-items-lg-center"
+            >
+              <input
+                type="text"
+                name="opinion"
+                class="contact_sub_email col-12 col-lg-10"
+                placeholder="Your Opinion Is Important ..."
+                id="user_opinion"
+                minlength="2"
+                maxlength="450"
+                required
+              />
+              <div
+                style="background-color: #31d4ae; cursor: pointer;"
+                class="col-lg-2 col-12 text-center border-0 p-1 text-white"
+                id="send_opinion"
+              >
+                إرسال
               </div>
+            </div>
+            <div
+              class="mt-2 alert alert-secondary border-0 text-muted d-flex justify-content-start"
+            >
+              you only have <b>450</b> character
             </div>
           </div>
         </div>
@@ -306,6 +318,9 @@
           SCRIPTHOUSE. All right reserved. Designed by Breezy</small
         >
       </div>
+      <div class="text-center mt-4 my-4 text-white">
+        <small>Language | <a href="lang/ar/index.html">العربية</a></small>
+      </div>
     </section>
     <!-- END FOOTER -->
 
@@ -316,6 +331,26 @@
 
     <!-- Digital clock With 12 Format -->
     <script src="js/clock.js"></script>
+
+    <script src="lib/smtp.js"></script>
+    <script src="js/opinion.js"></script>
+
+    <script>
+      $(document).ready(function () {
+        $('.nav-link').click(function () {
+          var key = $(this).text();
+
+          switch (key) {
+            case 'CONTACT':
+              $('html, body').animate(
+                { scrollTop: $('.contact_sub_wrapper').offset().top },
+                1000,
+              );
+              break;
+          }
+        });
+      });
+    </script>
 
     <!-- Changing Title -->
     <script>
