--- a/index.html
+++ b/index.html
@@ -67,63 +67,6 @@
 
     <!-- images slider -->
     <div class="swiper-container">
-      <!-- <div class="buttons-wrapper">
-        <div class="element_holder">
-          <div class="element1">
-            <div
-              class="elm_header d-flex justify-content-lg-start justify-content-center"
-            >
-              <small>building</small>
-            </div>
-            <div
-              class="elm_content d-flex flex-column flex-lg-row justify-content-between align-items-center d-flex flex-column flex-lg-row justify-content-between align-items-center"
-            >
-              <h6>Lorem.</h6>
-              <i class="fas fa-building" aria-hidden="true"></i>
-            </div>
-          </div>
-          <div class="element2">
-            <div
-              class="elm_header d-flex justify-content-lg-start justify-content-center d-flex justify-content-lg-start justify-content-center"
-            >
-              <small>settings</small>
-            </div>
-            <div
-              class="elm_content d-flex flex-column flex-lg-row justify-content-between align-items-center"
-            >
-              <h6>Lorem.</h6>
-              <i class="fas fa-cog" aria-hidden="true"></i>
-            </div>
-          </div>
-          <div class="element3">
-            <div
-              class="elm_header d-flex justify-content-lg-start justify-content-center"
-            >
-              <small>prople</small>
-            </div>
-            <div
-              class="elm_content d-flex flex-column flex-lg-row justify-content-between align-items-center"
-            >
-              <h6>Lorem.</h6>
-              <i class="fas fa-user" aria-hidden="true"></i>
-            </div>
-          </div>
-          <div class="element4">
-            <div
-              class="elm_header d-flex justify-content-lg-start justify-content-center"
-            >
-              <small>contracts</small>
-            </div>
-            <div
-              class="elm_content d-flex flex-column flex-lg-row justify-content-between align-items-center"
-            >
-              <h6>Lorem.</h6>
-              <i class="fas fa-book" aria-hidden="true"></i>
-            </div>
-          </div>
-        </div>
-      </div> -->
-
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <img
@@ -491,6 +434,9 @@
           >Copyright <i class="fa fa-copyright" aria-hidden="true"></i>2020
           SCRIPTHOUSE. All right reserved. Designed by Breezy</small
         >
+      </div>
+      <div class="text-center mt-4 my-4 text-white">
+        <small>Language | <a href="lang/ar/index.html">العربية</a></small>
       </div>
     </section>
     <!-- END FOOTER -->
