--- a/lang/ar/cart.html
+++ b/lang/ar/cart.html
@@ -292,6 +292,9 @@
           <a href="#"> BREEZY</a></small
         >
       </div>
+      <div class="text-center mt-4 my-4 text-white">
+        <small>اللغة | <a href="../../index.html">English</a></small>
+      </div>
     </section>
     <!-- END FOOTER -->
 
