--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -53,23 +53,8 @@
           <ul
             class="navbar-nav ml-auto pl-4 col-md-7 d-flex justify-content-between"
           >
-            <li class="nav-item">
-              <a href="category.html?category=clothes" class="nav-link"
-                >Clothes</a
-              >
-            </li>
-            <li class="nav-item">
-              <a href="category.html?category=food" class="nav-link">Food</a>
-            </li>
-            <li class="nav-item">
-              <a href="category.html?category=furniture" class="nav-link"
-                >Furnitures</a
-              >
-            </li>
-            <li class="nav-item">
-              <a href="category.html?category=Electronics" class="nav-link"
-                >Electronics</a
-              >
+          <li class="nav-item"><a href="#" class="nav-link">CONTACT</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link">HOME</a></li>
             </li>
           </ul>
         </div>
@@ -243,18 +228,31 @@
           </div>
           <div class="w-100 d-none"></div>
           <div class="col-12">
-            <div class="row b-primary">
-              <div class="col-12">
-                <form action="">
-                  <input
-                    type="email"
-                    name="email"
-                    class="contact_sub_email w-100"
-                    placeholder="Your email..."
-                    id=""
-                  />
-                </form>
+            <div
+              class="d-flex flex-lg-row flex-column justify-contetn-lg-between justify-content-center align-items- align-items-lg-center"
+            >
+              <input
+                type="text"
+                name="opinion"
+                class="contact_sub_email col-12 col-lg-10"
+                placeholder="Your Opinion Is Important ..."
+                id="user_opinion"
+                minlength="2"
+                maxlength="450"
+                required
+              />
+              <div
+                style="background-color: #31d4ae; cursor: pointer;"
+                class="col-lg-2 col-12 text-center border-0 p-1 text-white"
+                id="send_opinion"
+              >
+                إرسال
               </div>
+            </div>
+            <div
+              class="mt-2 alert alert-secondary border-0 text-muted d-flex justify-content-start"
+            >
+              you only have <b>450</b> character
             </div>
           </div>
         </div>
@@ -274,12 +272,32 @@
           SCRIPTHOUSE. All right reserved. Designed by Breezy</small
         >
       </div>
+      <div class="text-center mt-4 my-4 text-white">
+        <small>Language | <a href="lang/ar/index.html">العربية</a></small>
+      </div>
     </section>
     <!-- END FOOTER -->
 
     <!-- JS FILES -->
     <script src="lib/jquery-3.5.1.min.js"></script>
     <script src="lib/bootstrap-4.3.1.min.js"></script>
+
+    <script>
+      $(document).ready(function () {
+        $('.nav-link').click(function () {
+          var key = $(this).text();
+
+          switch (key) {
+            case 'CONTACT':
+              $('html, body').animate(
+                { scrollTop: $('.contact_sub_wrapper').offset().top },
+                1000,
+              );
+              break;
+          }
+        });
+      });
+    </script>
 
     <script>
       function goBack() {
@@ -289,6 +307,7 @@
 
     <!-- Email lib -->
     <script src="lib/smtp.js"></script>
+    <script src="js/opinion.js"></script>
 
     <script src="js/shopping_cart.js"></script>
     <!-- scroll effect with navbar -->
