--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             style="object-fit: cover; object-position: center;"
           />
           <div class="caption">
-            <div class="display-4">Technical Professional</div>
-            <p class="font-10 text-matte">
+            <div style="font-size: 4em;">Technical Professional</div>
+            <p class="font-10 text-matte" style="font-size: 2em;">
               For Integrated solutions
             </p>
           </div>
@@ -90,10 +90,9 @@
             alt=""
           />
           <div class="caption">
-            <div class="display-4">Lorem, ipsum dolor.</div>
-            <p class="font-8">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum,
-              unde accusamus!
+            <div style="font-size: 4em;">Meet the needs of the two sectors</div>
+            <p style="font-size: 2em;">
+              Private and public in addition to individuals
             </p>
           </div>
         </div>
@@ -104,10 +103,9 @@
             alt=""
           />
           <div class="caption">
-            <div class="display-4">Lorem, ipsum dolor.</div>
-            <p class="font-8">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum,
-              unde accusamus!
+            <div style="font-size: 4em;">Customs clearance</div>
+            <p class="font-10" style="font-size: 2em;">
+              And delivery to the customer's headquarters
             </p>
           </div>
         </div>
