bug fix -design-

--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -246,7 +246,7 @@
                 class="col-lg-2 col-12 text-center border-0 p-1 text-white"
                 id="send_opinion"
               >
-                إرسال
+                Send
               </div>
             </div>
             <div
