--- a/category.html
+++ b/category.html
@@ -69,9 +69,13 @@
           <ul
             class="navbar-nav ml-auto pl-4 col-md-7 d-flex justify-content-between"
           >
-          <li class="nav-item"><a href="#" class="nav-link">CONTACT</a></li>
-          <li class="nav-item"><a href="shop.html" class="nav-link">SHOP</a></li>
-          <li class="nav-item"><a href="index.html" class="nav-link">HOME</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">CONTACT</a></li>
+            <li class="nav-item">
+              <a href="shop.html" class="nav-link">SHOP</a>
+            </li>
+            <li class="nav-item">
+              <a href="index.html" class="nav-link">HOME</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -292,7 +296,7 @@
                 class="col-lg-2 col-12 text-center border-0 p-1 text-white"
                 id="send_opinion"
               >
-                إرسال
+                Send
               </div>
             </div>
             <div
