--- a/shop.html
+++ b/shop.html
@@ -404,13 +404,13 @@
                 class="col-lg-2 col-12 text-center border-0 p-1 text-white"
                 id="send_opinion"
               >
-                إرسال
+                Send
               </div>
             </div>
             <div
               class="mt-2 alert alert-secondary border-0 text-muted d-flex justify-content-start"
             >
-              you only have <b>450</b> character
+              you only have <b> 450 </b> character
             </div>
           </div>
         </div>
