changing  top navbar

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a href="/" class="nav_logo">
           <h1>
             <img
-              src="img/logo/full_1.png"
+              src="img/logo/full_3_white.png"
               width="50"
               height="50"
               class="rounded"
@@ -49,7 +49,7 @@
           data-toggle="collapse"
           data-target="#navbarResponsive"
         >
-          <span class="fas fa-bars"></span>
+          <span class="fas fa-bars text-white"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul
@@ -513,7 +513,7 @@
       });
     </script>
     <!-- scroll effect with navbar -->
-    <script src="js/nav_scrooler.js"></script>
+    <!-- <script src="js/nav_scrooler.js"></script> -->
     <script src="js/type_effect.js"></script>
     <script src="js/loader.js"></script>
   </body>
