--- a/lang/ar/shopping_cart.html
+++ b/lang/ar/shopping_cart.html
@@ -34,7 +34,7 @@
         <a href="/" class="nav_logo">
           <h1>
             <img
-              src="../../img/logo/full_3.png"
+            src="../../img/logo/full_3_white.png"
               width="50"
               height="50"
               class="rounded"
@@ -48,7 +48,7 @@
           data-toggle="collapse"
           data-target="#navbarResponsive"
         >
-          <span class="fas fa-bars"></span>
+          <span class="fas fa-bars text-white"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul
@@ -299,7 +299,7 @@
     <script src="js/opinion.js"></script>
     <script src="js/shopping_cart.js"></script>
     <!-- scroll effect with navbar -->
-    <script src="js/nav_scrooler.js"></script>
+    <!-- <script src="js/nav_scrooler.js"></script> -->
     <script src="js/loader.js"></script>
   </body>
 </html>
