--- a/cart.html
+++ b/cart.html
@@ -36,7 +36,7 @@
         <a href="/" class="nav_logo">
           <h1>
             <img
-              src="img/logo/full_3.png"
+            src="img/logo/full_3_white.png"
               width="50"
               height="50"
               class="rounded"
@@ -50,7 +50,7 @@
           data-toggle="collapse"
           data-target="#navbarResponsive"
         >
-          <span class="fas fa-bars"></span>
+          <span class="fas fa-bars text-white"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto pl-4 col-md-7 d-flex justify-content-between">
@@ -334,7 +334,7 @@
     <script src="js/like.js"></script>
 
     <!-- scroll effect with navbar -->
-    <script src="js/nav_scrooler.js"></script>
+    <!-- <script src="js/nav_scrooler.js"></script> -->
     <script src="js/cart_effects.js"></script>
     <script src="js/cart_data.js"></script>
     <script src="js/loader.js"></script>
