--- a/lang/ar/index.html
+++ b/lang/ar/index.html
@@ -32,12 +32,12 @@
     <!-- pre-loader -->
 
     <!-- top-nav -->
-    <nav id="top_nav" class="navbar navbar-expand-md p-0 sticky-top">
+    <nav id="top_nav" dir="ltr" class="navbar navbar-expand-md p-0 sticky-top">
       <div class="container-fluid">
         <a href="/" class="nav_logo">
           <h1>
             <img
-              src="../../img/logo/full_1.png"
+              src="../../img/logo/full_3_white.png"
               width="50"
               height="50"
               class="rounded"
@@ -51,7 +51,7 @@
           data-toggle="collapse"
           data-target="#navbarResponsive"
         >
-          <span class="fas fa-bars"></span>
+          <span class="fas fa-bars text-white"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul
@@ -532,7 +532,7 @@
       });
     </script>
     <!-- scroll effect with navbar -->
-    <script src="js/nav_scrooler.js"></script>
+    <!-- <script src="js/nav_scrooler.js"></script> -->
     <script src="js/type_effect.js"></script>
     <script src="js/loader.js"></script>
   </body>
