--- a/lang/ar/shop.html
+++ b/lang/ar/shop.html
@@ -31,12 +31,12 @@
     <!-- end pre-loader -->
 
     <!-- top-nav -->
-    <nav id="top_nav" class="navbar navbar-expand-md p-0 sticky-top">
+    <nav id="top_nav" dir="ltr" class="navbar navbar-expand-md p-0 sticky-top">
       <div class="container-fluid">
         <a href="/" class="nav_logo">
           <h1>
             <img
-              src="../../../../img/logo/full_3.png"
+            src="../../img/logo/full_3_white.png"
               width="50"
               height="50"
               class="rounded"
@@ -50,7 +50,7 @@
           data-toggle="collapse"
           data-target="#navbarResponsive"
         >
-          <span class="fas fa-bars"></span>
+          <span class="fas fa-bars text-white"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto pl-4 col-md-7 d-flex justify-content-between">
@@ -69,10 +69,10 @@
     <!-- END OF SHOPING SIDE -->
 
     <!-- CATALOG FIRST BAR SLIDER -->
-    <section class="catalog_sec"  dir="ltr">
+    <section class="catalog_sec">
       <!-- <div class="display-4 text-center cat_head_line mb-4 mt-5">CATALOG</div> -->
       <br />
-      <div class="center row d-flex justify-content-around">
+      <div class="center row d-flex justify-content-around" dir="ltr">
         <div class="col-12 col-md-3 col-sm-12 col-lg-3 col-xl-3">
           <a href="category.html?category=Electronics"> <div class="cat_img1">
             <div class="cat_header">
@@ -518,7 +518,7 @@
 
     <script src="js/opinion.js"></script>
 
-    <script src="js/nav_scrooler.js"></script>
+    <!-- <script src="js/nav_scrooler.js"></script> -->
     <script src="js/loader.js"></script>
   </body>
 </html>
