new section add -spares-

--- a/cart.html
+++ b/cart.html
@@ -205,10 +205,10 @@
                     >Electronics</a
                   >
                   <a
-                    href="category.html?category=food"
+                    href="category.html?category=spares"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
-                    >Food</a
+                    >Spares</a
                   >
                   <a
                     href="category.html?category=clothes"
@@ -302,7 +302,7 @@
         >
       </div>
       <div class="text-center mt-4 my-4 text-white">
-        <small>Language | <a href="lang/ar/index.html">العربية</a></small>
+        <small>Language | <a href="lang/ar/cart.html">العربية</a></small>
       </div>
     </section>
     <!-- END FOOTER -->
