--- a/category.html
+++ b/category.html
@@ -226,10 +226,10 @@
                     >Electronics</a
                   >
                   <a
-                    href="category.html?category=food"
+                    href="category.html?category=spares"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
-                    >Food</a
+                    >spares</a
                   >
                   <a
                     href="category.html?category=clothes"
@@ -323,7 +323,7 @@
         >
       </div>
       <div class="text-center mt-4 my-4 text-white">
-        <small>Language | <a href="lang/ar/index.html">العربية</a></small>
+        <small>Language | <a href="lang/ar/category.html">العربية</a></small>
       </div>
     </section>
     <!-- END FOOTER -->
@@ -365,7 +365,7 @@
 
       var title = document.getElementById('cat_title_text');
       switch (url_params) {
-        case 'food':
+        case 'spares':
           title.innerHTML =
             'Candded Tasts <div class="w-10 bg-primary mt-5" style="height: 0.2rem;"></div>';
           break;
