--- a/lang/ar/category.html
+++ b/lang/ar/category.html
@@ -226,7 +226,7 @@
                     href="#"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
-                    >أطعمة</a
+                    >إسبيرات</a
                   >
                   <a
                     href="#"
@@ -312,7 +312,7 @@
         >
       </div>
       <div class="text-center mt-4 my-4 text-white">
-        <small>اللغة | <a href="../../index.html">English</a></small>
+        <small>اللغة | <a href="../../category.html">English</a></small>
       </div>
     </section>
     <!-- END FOOTER -->
@@ -351,9 +351,9 @@
 
       var title = document.getElementById('cat_title_text');
       switch (url_params) {
-        case 'food':
+        case 'spares':
           title.innerHTML =
-            'الأطعمة المعلبة <div class="w-10 bg-primary mt-5" style="height: 0.2rem;"></div>';
+            'الإسبيرات المعلبة <div class="w-10 bg-primary mt-5" style="height: 0.2rem;"></div>';
           break;
         case 'Electronics':
           title.innerHTML =
