--- a/lang/ar/shopping_cart.html
+++ b/lang/ar/shopping_cart.html
@@ -176,7 +176,7 @@
                         href="#"
                         style="text-decoration: none; padding-top: 1rem;"
                         class="text-dark"
-                        >أطعمة</a
+                        >إسبيرات</a
                       >
                       <a
                         href="#"
@@ -262,7 +262,7 @@
             >
           </div>
           <div class="text-center mt-4 my-4 text-white">
-            <small>اللغة | <a href="../../index.html">English</a></small>
+            <small>اللغة | <a href="../../shopping_cart.html">English</a></small>
           </div>
         </section>
         <!-- END FOOTER -->
