--- a/shop.html
+++ b/shop.html
@@ -90,10 +90,10 @@
           </a>
         </div>
         <div class="col-md-3 col-sm-12 col-lg-3 col-xl-3">
-          <a href="category.html?category=food">
-            <div class="cat_header"><div class="h3 text-white bg-primary p-1">Food</div></div>
+          <a href="category.html?category=spares">
+            <div class="cat_header"><div class="h3 text-white bg-primary p-1">Spares</div></div>
           <div class="cat_img3">
-            <img src="img/icons/shelf.png" alt="food" />
+            <img src="img/icons/spares.png" alt="spares" />
           </div>
           </a>
         </div>
@@ -170,7 +170,7 @@
               </div>
               <div class="col-6">
                 <div class="position-relative most_sell_holder2 w-100 h-100">
-                 <a href="cart.html?category=food&code=4"><img src="img/products/Food/nutella.jpg" /></a> 
+                 <a href="cart.html?category=spares&code=7"><img src="img/products/spares/tires.jpg" /></a> 
                   <div class="most_sell_img_btn item2">
                     <button class="bg-white shadow-sm">
                       <i class="fa fa-search" aria-hidden="true"></i>
@@ -189,10 +189,10 @@
                     class="d-flex position-relative flex-column justiify-content-center align-items-center most_sell_pricing"
                   >
                     <div class="most_sell_discription h4">
-                      Nutella
+                      Lexus Tire 23
                     </div>
                     <div class="most_sell_pricing">
-                      <h6 class="text-success">$25</h6>
+                      <h6 class="text-success">$50</h6>
                     </div>
                   </div>
                 </div>
@@ -337,7 +337,7 @@
                     href="#"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
-                    >Food</a
+                    >Spares</a
                   >
                   <a
                     href="#"
@@ -431,7 +431,7 @@
         >
       </div>
       <div class="text-center mt-4 my-4 text-white">
-        <small>Language | <a href="lang/ar/index.html">العربية</a></small>
+        <small>Language | <a href="lang/ar/shop.html">العربية</a></small>
       </div>
     </section>
     <!-- END FOOTER -->
