--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -179,7 +179,7 @@
                     href="#"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
-                    >Food</a
+                    >Spares</a
                   >
                   <a
                     href="#"
@@ -273,7 +273,7 @@
         >
       </div>
       <div class="text-center mt-4 my-4 text-white">
-        <small>Language | <a href="lang/ar/index.html">العربية</a></small>
+        <small>Language | <a href="lang/ar/shopping_cart.html">العربية</a></small>
       </div>
     </section>
     <!-- END FOOTER -->
