--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
               </div>
 
               <div class="d-flex justify-content-center mb-2">
-                <a href="category.html?category=food" class="text-white"
+                <a href="category.html?category=spares" class="text-white"
                   ><small>VIEW MORE</small></a
                 >
               </div>
