--- a/lang/ar/cart.html
+++ b/lang/ar/cart.html
@@ -207,7 +207,7 @@
                     href="#"
                     style="text-decoration: none; padding-top: 1rem;"
                     class="text-dark"
-                    >أطعمة</a
+                    >إسبيرات</a
                   >
                   <a
                     href="#"
@@ -293,7 +293,7 @@
         >
       </div>
       <div class="text-center mt-4 my-4 text-white">
-        <small>اللغة | <a href="../../index.html">English</a></small>
+        <small>اللغة | <a href="../../cart.html">English</a></small>
       </div>
     </section>
     <!-- END FOOTER -->
