--- a/lang/ar/index.html
+++ b/lang/ar/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/swip_animation.css" />
 
     <link rel="stylesheet" href="../../css/main.css" />
-    <link rel="stylesheet" href="../../css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="../../Lib/swiper.css" />
     <link rel="stylesheet" href="../../css/lang.css" />
   </head>
